# stock_analysis

./: .descriptions.xml  .env.custom.example  .env.example  .gitignore  Annotator.xml  GrazieInspection.xml  Makefile  README.md  alembic.ini  constraints.txt  docker-compose.test.yml  naetra.db  pyproject.toml  pytest.ini  requirements-test.txt
app/: __init__.py  main.py
app/api/: __init__.py
app/api/controllers/: analysis_controller.py  auth_controller.py  chat_controller.py  market_controller.py  portfolio_controller.py  stock_controller.py
app/api/routes/: analysis.py  auth.py  market.py  portfolio.py  stocks.py
app/chaetra/: __init__.py  brain.py  interfaces.py  learning.py  llm.py  memory.py  opinion.py  reasoning.py
app/core/: __init__.py  cache.py  config.py  database.py  dependencies.py  logging.py  models.py  security.py
app/models/: __init__.py  analysis.py  analysis_output.py  chat.py  portfolio.py  stock.py  user.py
app/schemas/: __init__.py  auth_schemas.py  chat_schemas.py  portfolio_schemas.py
app/services/: __init__.py  analysis_service.py  chat_service.py  market_data_service.py  portfolio_service.py  user_service.py
app/services/analysis/: fundamental.py  sentiment.py  technical.py
app/services/market_data/: alpha_vantage.py  finnhub.py  interface.py  sec_edgar.py  yahoo_finance.py
app/services/ml/: pattern_recognition.py  prediction.py
app/tests/: test_lm_studio.py  test_lm_studio_minimal.py
docs/: API.md  ARCHITECTURE.md  CHAETRA_ENGINE.md  CONFIGURATION.md  MODULE_GUIDE.md  NAETRA_APPLICATION.md  SETUP.md  TS_TO_TSX_CONVERSION.md  chat_component_changes.md  chat_ui_mockup.md  chat_updates.md
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.ts
frontend/src/components/common/: AlertDialog.tsx  Chart.tsx  MarkdownContent.tsx  StockSearch.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/hooks/: useAuth.ts  useMarketData.ts  useMarketData.tsx  usePortfolioData.ts  usePortfolioData.tsx  useStreamChat.ts
frontend/src/pages/: ChatPage.tsx  Dashboard.tsx  LoginPage.tsx  MarketOverview.tsx  Settings.tsx  StockAnalysis.tsx
frontend/src/store/: analysis.tsx  market.tsx  settings.tsx
frontend/src/types/: portfolio.tsx
frontend/src/utils/: api.ts  api.tsx  formatters.ts  formatters.tsx
migrations/: env.py
migrations/versions/: 497081177b0a_initial_migration.py  8d35ae1193f9_add_chat_session_and_message_tables.py
scripts/: postgres_install output  run_tests.sh  seed_data.py  setup.sh  start.sh  stop.sh
tests/: conftest.py
tests/integration/: test_chaetra.py
tests/mocks/: initializerJson.json
tests/performance/: test_chaetra_perf.py
tests/unit/: test_learning.py  test_llm.py  test_memory.py  test_models.py  test_opinion.py  test_reasoning.py  test_utils.py
(+12 files in other folders)
